# SecureBoot

./: .gitignore  README.md  UserInfo.md  launch.bat  pyproject.toml  requirements.txt
api/: main.py  websocket.py
api/routers/: auth.py  diagnostics.py  test_scenarios.py
design/architecture/: dynamic_architecture.md  static_architecture.md
design/diagrams/: callstack_secure_boot_manager.md  seq_auth_flow.md  seq_failure_abort.md  (+2 more)
docs/: SecureBoot.html  index.html
sim/: attestation_service.py  boot_rom.py  config.py  cryif.py  crypto_provider.py  csm.py  debug_manager.py  dem.py  ecu_state.py  hsm.py  manifest_validator.py  nvm.py  recovery_manager.py  secure_boot_manager.py  security_logger.py  trust_anchor_manager.py  update_manager.py  version_manager.py
tests/: conftest.py  test_vt_01_bootloader_sig_verify.py  test_vt_02_application_sig_integrity.py  test_vt_03_rollback_protection.py  test_vt_04_invalid_manifest.py  test_vt_05_public_key_tampering.py  test_vt_06_secure_boot_enable_fuse.py  test_vt_07_power_loss_recovery.py  test_vt_08_tamper_glitch_response.py  test_vt_09_debug_interface_lock.py  test_vt_10_hsm_key_nonexportability.py  test_vt_11_recovery_mode_auth.py  test_vt_12_replay_attack.py  test_vt_13_hash_integrity_check.py  test_vt_14_chain_of_trust.py  test_vt_15_boot_log_protection.py  test_vt_16_key_provisioning_audit.py  test_vt_17_crypto_algorithm_compliance.py  test_vt_18_performance_timing.py  test_vt_19_environmental_stress.py  test_vt_20_end_to_end_regression.py  test_vt_21_certificate_chain_validation.py  test_vt_22_cert_expiration.py
(+14 files in other folders)
